<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_title_height"
        android:background="@color/color_title_bg">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_arrow_margin_left"
            android:src="@mipmap/img_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_title_text"
            android:textColor="@color/color_title_text"
            android:textSize="@dimen/dimen_title_textsize" />
    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_tablayout_height"
        android:background="@color/color_tablayout_bg"
        app:tabIndicatorColor="@color/color_title_bg"
        app:tabIndicatorHeight="@dimen/dimen_indicator_height"
        app:tabSelectedTextColor="@color/color_time_value"
        app:tabTextAppearance="@style/TabLayoutTextStyle"
        app:tabTextColor="@color/color_time_value" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_week_height"
        android:background="@color/color_week_bg"
        android:orientation="horizontal">

        <TextView
            style="@style/CalendarWeek"
            android:text="@string/str_week_monday" />

        <TextView
            style="@style/CalendarWeek"
            android:text="@string/str_week_tuesday" />

        <TextView
            style="@style/CalendarWeek"
            android:text="@string/str_week_wednesday" />

        <TextView
            style="@style/CalendarWeek"
            android:text="@string/str_week_thursday" />

        <TextView
            style="@style/CalendarWeek"
            android:text="@string/str_week_friday" />

        <TextView
            style="@style/CalendarWeek"
            android:text="@string/str_week_saturday" />

        <TextView
            style="@style/CalendarWeek"
            android:text="@string/str_week_sunday" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>